--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
 html,
 body,
 div,
@@ -39,11 +46,6 @@ td {
   padding: 0;
   vertical-align: baseline;
   -webkit-font-smoothing: antialiased;
-  box-sizing: border-box;
-  -o-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
 }
 h1,
 h2,
@@ -91,13 +93,14 @@ option {
   vertical-align: middle;
 }
 .clear:after {
-  clear: both;
-  content: ".";
-  display: block;
-  height: 0;
   visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
 }
-.clear {
+.clearfix {
   height: 0;
   clear: both;
   display: block;
