Media Queries update

--- a/less/style.less
+++ b/less/style.less
@@ -6,9 +6,9 @@
 
 @import url('variables.less');
 
-// ================================================================================
+// ===========================================================================================================================
 // Text
-// ================================================================================
+// ===========================================================================================================================
 h1,
 h2,
 h3,
@@ -29,9 +29,9 @@ strong{
 
 }
 
-// ================================================================================
+// ===========================================================================================================================
 // Global
-// ================================================================================
+// ===========================================================================================================================
 body,
 html{
 	
@@ -42,19 +42,36 @@ html{
 	position: relative;
 }
 
-// ================================================================================
+// ===========================================================================================================================
 // Media Queries
-// ================================================================================
-@media only screen and (min-width : 1024px) {
-	
+// ===========================================================================================================================
+@media only screen and (min-width : 1281px) {
+	.container{
+		width: 1170px;
+		background: red;
+	}
 }
-@media only screen and (min-width : 720px) 
-and (max-width : 1023px){
-	
+@media only screen and (min-width : 1025px) and (max-width : 1280px) {
+	.container{
+		width: 960px;
+		background: yellow;
+	}
 }
-@media only screen and (max-width : 719px) {
-	
+@media only screen and (min-width : 801px) and (max-width : 1024px) {
+	.container{
+		width: 750px;
+		background: olive;
+	}
 }
-@media only screen and (max-width : 320px) {
-	
+@media only screen and (min-width : 641px) and (max-width : 800px) {
+	.container{
+		width: 620px;
+		background: brown;
+	}
+}
+@media only screen and (max-width : 640px) {
+	.container{
+		width: 100%;
+		background: pink;
+	}
 }
