--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,1 @@
-/*
- * @copyright Martin Bussières
- */
-@charset "UTF-8";
-.transition {
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-  -ms-transition: all 0.1s ease-in-out;
-  -o-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out;
-}
-p {
-  font-size: 1em;
-}
-.container {
-  width: 1170px;
-  margin: 0 auto;
-  position: relative;
-}
-@media only screen and (min-width: 1024px) {
-  
-}
-@media only screen and (min-width: 720px) and (max-width: 1023px) {
-  
-}
-@media only screen and (max-width: 719px) {
-  
-}
-@media only screen and (max-width: 320px) {
-  
-}
+@charset "UTF-8";.transition{-webkit-transition:all .1s ease-in-out;-moz-transition:all .1s ease-in-out;-ms-transition:all .1s ease-in-out;-o-transition:all .1s ease-in-out;transition:all .1s ease-in-out}p{font-size:1em}.container{width:1170px;margin:0 auto;position:relative}@media only screen and (min-width:1281px){.container{width:1170px;background:red}}@media only screen and (min-width:1025px) and (max-width:1280px){.container{width:960px;background:yellow}}@media only screen and (min-width:801px) and (max-width:1024px){.container{width:750px;background:olive}}@media only screen and (min-width:641px) and (max-width:800px){.container{width:620px;background:brown}}@media only screen and (max-width:640px){.container{width:100%;background:pink}}
