--- a/less/style.less
+++ b/less/style.less
@@ -7,136 +7,7 @@
 // ===========================================================================================================================
 // Reset
 // ===========================================================================================================================
-*{
-	box-sizing: border-box;
-	-o-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-}
-html,
-body,
-div,
-span,
-object,
-iframe,
-p,
-blockquote,
-pre,
-a,
-abbr,
-address,
-code,
-em,
-img,
-strong,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td{
-	border: 0;
-	font-family: inherit;
-	font-size: 100%;
-	font-style: inherit;
-	font-weight: inherit;
-	margin: 0;
-	outline: 0;
-	padding: 0;
-	vertical-align: baseline;
-	-webkit-font-smoothing: antialiased;
-	}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6{
-	border: 0;
-	margin: 0;
-	outline: 0;
-	padding: 0;
-	vertical-align: baseline;
-	-webkit-font-smoothing: antialiased;
-	}
-:focus{
-	outline: 0;
-	}
-ul{
-	list-style: none;
-	}
-table{
-	border-collapse: separate;
-	border-spacing: 0;
-	}
-caption,
-th,
-td{
-	font-weight: normal;
-	text-align: left;
-	}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after{
-	content: "";
-	}
-blockquote,
-q{
-	quotes: "" "";
-	}
-img,
-input,
-select,
-option{
-	vertical-align: middle;
-	}
-.clear:after{
-	visibility: hidden;
-	display: block;
-	font-size: 0;
-	content: " ";
-	clear: both;
-	height: 0;
-	}
-.clearfix{
-	height:0;
-	clear: both;
-	display:block
-	}
-strong, .bold {
-	font-weight:bold;
-	}
-.floatright {
-	float:right;
-	}
-.floatleft {
-	float:left;
-	}
-.indent{
-	text-indent: -9999px;
-	line-height:0;
-	}
-article,
-aside,
-figure,
-footer,
-header,
-hgroup,
-nav,
-section{
-	display:block;
-	}
+*{box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box}html,body,div,span,object,iframe,p,blockquote,pre,a,abbr,address,code,em,img,strong,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{border:0;font-family:inherit;font-size:100%;font-style:inherit;font-weight:inherit;margin:0;outline:0;padding:0;vertical-align:baseline;-webkit-font-smoothing:antialiased}h1,h2,h3,h4,h5,h6{border:0;margin:0;outline:0;padding:0;vertical-align:baseline;-webkit-font-smoothing:antialiased}:focus{outline:0}ul{list-style:none}table{border-collapse:separate;border-spacing:0}caption,th,td{font-weight:normal;text-align:left}blockquote:before,blockquote:after,q:before,q:after{content:""}blockquote,q{quotes:"" ""}img,input,select,option{vertical-align:middle}.clear:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}.clearfix{height:0;clear:both;display:block}strong,.bold{font-weight:bold}.floatright{float:right}.floatleft{float:left}.indent{text-indent:-9999px;line-height:0}article,aside,figure,footer,header,hgroup,nav,section{display:block}
 
 // ===========================================================================================================================
 // Colors
