Link uncompressed files and updating jQuery
Link script.js instead script.min.js
jQuery 1.8.3 to .10.2 Update
Link uncompressed CSS instead minified version

--- a/css/old-ie.css
+++ b/css/old-ie.css
@@ -1,1 +1,13 @@
-.test-sprite{background-image:url(../img/sprite.png);background-repeat:no-repeat;background-position:0 0;width:1000px;height:50px;padding-left:60px}
+/*
+===========================================================================================================================
+Sprite
+===========================================================================================================================
+*/
+.test-sprite {
+  background-image: url(../img/sprite.png);
+  background-repeat: no-repeat;
+  background-position: 0px 0px;
+  width: 1000px;
+  height: 50px;
+  padding-left: 60px;
+}
