--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,14 @@ section {
 section img {
   margin-bottom: 30px;
 }
+section .link {
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
+}
 input[type="text"],
 input[type="email"],
 textarea {
