--- a/less/style.less
+++ b/less/style.less
@@ -123,6 +123,14 @@ section{
 	img{
 		margin-bottom: 30px;
 	}
+	.link{
+		-ms-word-break: break-all;
+		word-break: break-all;
+		word-break: break-word;
+		-webkit-hyphens: auto;
+		-moz-hyphens: auto;
+		hyphens: auto;
+	}
 }
 input[type="text"],
 input[type="email"],
