Rewrite URL extension
Hide file extension for clean URL

--- a/less/style.less
+++ b/less/style.less
@@ -105,8 +105,8 @@ img{
 // Custom
 // ===========================================================================================================================
 body{
-	font-family: @sans;
-	color: #333;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-weight: 300;
 }
 header{
 	background: tomato;
@@ -147,6 +147,11 @@ input[type="submit"]{
 	background: tomato;
 	border-radius: 50px;
 	padding: 10px;
+}
+.trigger{
+	z-index: 9999;
+	height: 200px;
+	background: blue;
 }
 .test-sprite{
 	.sprite(0,0);
