--- a/css/style.css
+++ b/css/style.css
@@ -182,8 +182,8 @@ img {
   height: auto;
 }
 body {
-  font-family: arial, sans-serif;
-  color: #333;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300;
 }
 header {
   background: tomato;
@@ -224,6 +224,11 @@ input[type="submit"] {
   background: tomato;
   border-radius: 50px;
   padding: 10px;
+}
+.trigger {
+  z-index: 9999;
+  height: 200px;
+  background: blue;
 }
 .test-sprite {
   background-image: url(../img/sprite.svg);
