--- a/less/style.less
+++ b/less/style.less
@@ -7,7 +7,7 @@
 // ===========================================================================================================================
 // Reset
 // ===========================================================================================================================
-*{box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box}html,body,div,span,object,iframe,p,blockquote,pre,a,abbr,address,code,em,img,strong,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{border:0;font-family:inherit;font-size:100%;font-style:inherit;font-weight:inherit;margin:0;outline:0;padding:0;vertical-align:baseline;-webkit-font-smoothing:antialiased}h1,h2,h3,h4,h5,h6{border:0;margin:0;outline:0;padding:0;vertical-align:baseline;-webkit-font-smoothing:antialiased}:focus{outline:0}ul{list-style:none}table{border-collapse:separate;border-spacing:0}caption,th,td{font-weight:normal;text-align:left}blockquote:before,blockquote:after,q:before,q:after{content:""}blockquote,q{quotes:"" ""}img,input,select,option{vertical-align:middle}input,textarea{-webkit-appearance:none;border-radius:0;}.clear:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}.clearfix{height:0;clear:both;display:block}strong,.bold{font-weight:bold}.floatright{float:right}.floatleft{float:left}.indent{text-indent:-9999px;line-height:0}article,aside,figure,footer,header,hgroup,nav,section{display:block}
+*{margin:0;padding:0;box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box}html,body,div,span,object,iframe,p,blockquote,pre,a,abbr,address,code,em,img,strong,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{border:0;font-family:inherit;font-size:100%;font-style:inherit;font-weight:inherit;margin:0;outline:0;padding:0;vertical-align:baseline;-webkit-font-smoothing:antialiased}h1,h2,h3,h4,h5,h6{border:0;margin:0;outline:0;padding:0;vertical-align:baseline;-webkit-font-smoothing:antialiased}:focus{outline:0}ul{list-style:none}table{border-collapse:separate;border-spacing:0}caption,th,td{font-weight:normal;text-align:left}blockquote:before,blockquote:after,q:before,q:after{content:""}blockquote,q{quotes:"" ""}img,input,select,option{vertical-align:middle}input,textarea{-webkit-appearance:none;border-radius:0;}.clear:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}.clearfix{height:0;clear:both;display:block}strong,.bold{font-weight:bold}.floatright{float:right}.floatleft{float:left}.indent{text-indent:-9999px;line-height:0}article,aside,figure,footer,header,hgroup,nav,section{display:block}
 
 // ===========================================================================================================================
 // Responsive Grid Based on Bootstrap
@@ -114,6 +114,20 @@ html{
 	height: 100%;
 	margin: 0 auto;
 	
+}
+#wrapper{
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	width:100%;
+	*width:100%;
+	margin: 0 auto -100px; // Based on footer eight
+}
+footer{
+	position: relative;
+	margin: 0 auto;
+	height: 100px;
+	clear:both;
 }
 .container{
 	margin: 0 auto;
@@ -263,13 +277,13 @@ section{
 @media only screen and (min-width : 641px) {
 	header,
 	section{
-		padding: 80px 20px;
+		padding: 140px 20px 80px 20px;
 	}
 }
 @media only screen and (max-width : 640px) {
 	header,
 	section{
-		padding: 40px 20px;
+		padding: 96px 20px 40px 20px;
 	}
 }
 input[type="text"],
@@ -335,6 +349,11 @@ li{
 	.js .nav-collapse.closed {
 		max-height: none;
 	}
+	.nav{
+		position: fixed;
+		margin: 0 auto;
+		width: 100%;
+	}
 	.nav-toggle {
 		display: none;
 	}
@@ -349,6 +368,11 @@ li{
 @media only screen and (max-width : 767px) {
 	body{
 		font-size: .8em;
+	}
+	.nav{
+		position: fixed;
+		margin: 0 auto;
+		width: 100%;
 	}
 	.nav-collapse{
 		ul{
