Scrollspy add-on
Add Bootstrap 3.0 Scrollspy JS - The ScrollSpy plugin is for
automatically updating nav targets based on scroll position. Scroll the
area below the navbar and watch the active class change.

--- a/less/theme.less
+++ b/less/theme.less
@@ -138,6 +138,9 @@ Navbar
 .navbar-default .navbar-nav > li > a {
   color: #fff;
 }
+.navbar-default li.active a{
+	color: #333;
+}
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #333;
@@ -177,7 +180,7 @@ Navbar
 }
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #777777;
+    color: #333;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
@@ -187,7 +190,7 @@ Navbar
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #555555;
+    color: #333;
     background-color: #e7e7e7;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
