--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -627,12 +627,12 @@ abbr[data-original-title] {
   font-size: 90%;
   text-transform: uppercase;
 }
-blockquote {
-  padding: 10px 20px;
-  margin: 0 0 20px;
-  font-size: 17.5px;
-  border-left: 5px solid #eeeeee;
-}
+// blockquote {
+//   padding: 10px 20px;
+//   margin: 0 0 20px;
+//   font-size: 17.5px;
+//   border-left: 5px solid #eeeeee;
+// }
 blockquote p:last-child,
 blockquote ul:last-child,
 blockquote ol:last-child {
@@ -690,14 +690,14 @@ pre,
 samp {
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 }
-code {
-  padding: 2px 4px;
-  font-size: 90%;
-  color: #c7254e;
-  background-color: #f9f2f4;
-  white-space: nowrap;
-  border-radius: 4px;
-}
+// code {
+//   padding: 2px 4px;
+//   font-size: 90%;
+//   color: #c7254e;
+//   background-color: #f9f2f4;
+//   white-space: nowrap;
+//   border-radius: 4px;
+// }
 kbd {
   padding: 2px 4px;
   font-size: 90%;
