--- a/less/theme.less
+++ b/less/theme.less
@@ -116,6 +116,25 @@ code,
 li{
 	font-family: "Courier New", Courier, monospace;
 }
+.demo{
+	margin-bottom: 30px;
+	.col-sm-1,
+	.col-sm-2,
+	.col-sm-3,
+	.col-sm-4,
+	.col-sm-5,
+	.col-sm-6,
+	.col-sm-7,
+	.col-sm-8,
+	.col-sm-9,
+	.col-sm-10,
+	.col-sm-11,
+	.col-sm-12{
+		border: 1px solid #ddd;
+		padding: 1em;
+		background: #f9f9f9;
+	}
+}
 /*
 ===========================================================================================================================
 Navbar
