Structure update an fix
Update of LESS structure and link fix in main nav

--- a/less/style.less
+++ b/less/style.less
@@ -1,180 +1,36 @@
-/*
- * @copyright Martin Bussières
- */
-
 @charset "UTF-8";
 
-// ===========================================================================================================================
-// Reset
-// ===========================================================================================================================
+/*
+===========================================================================================================================
+Reset
+===========================================================================================================================
+*/
 @import url('normalize.less');
 
-// ===========================================================================================================================
-// Responsive Grid Based on Bootstrap 3
-// ===========================================================================================================================
+/*
+===========================================================================================================================
+Responsive grid (based on Bootstrap 3)
+===========================================================================================================================
+*/
 @import url('bootstrap.less');
 
-// ===========================================================================================================================
-// Variables
-// ===========================================================================================================================
-@d-gray: #3B3A39;
+/*
+===========================================================================================================================
+Variables
+===========================================================================================================================
+*/
+@import url('variables.less');
 
-.transition{
-	-webkit-transition: all .1s ease-in-out;
-	-moz-transition: all .1s ease-in-out;
-	-ms-transition: all .1s ease-in-out;
-	-o-transition: all .1s ease-in-out;
-	transition: all .1s ease-in-out;
-}
+/*
+===========================================================================================================================
+Add-ons
+===========================================================================================================================
+*/
+@import url('addons.less');
 
-@spriteGrid: 50px;
-
-.sprite(@x, @y) {
-	background-image: url(../img/sprite.svg);
-	background-repeat: no-repeat;
-	background-position: -(@x*@spriteGrid) -(@y*@spriteGrid);
-}
-
-.sans{
-	font-family: helvetica neue, helvetica, arial, sans-serif;
-
-}
-.serif{
-	font-family: georgia, sans-serif;
-}
-
-// ===========================================================================================================================
-// Text
-// ===========================================================================================================================
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6{
-	line-height: 1em;
-}
-h1{
-	font-size: 3em;
-
-}
-h2{
-	font-size: 2.2em;
-}
-h3{
-	font-size: 2em;
-}
-h4{
-	font-size: 1.6em;
-}
-h5{
-	font-size: 1.2em;
-}
-h6{
-	font-size: 1em;
-}
-blockquote{
-
-}
-p{
-	font-size: 1em;
-	line-height: 1.4em;
-}
-a{
-	-ms-word-break: break-all;
-	word-break: break-all;
-	word-break: break-word;
-	-webkit-hyphens: auto;
-	-moz-hyphens: auto;
-	hyphens: auto;
-	&:hover{
-
-	}
-}
-strong{
-
-}
-.text-left {
-	text-align: left;
-}
-.text-right {
-	text-align: right;
-}
-.text-center {
-	text-align: center;
-}
-
-// ===========================================================================================================================
-// Global
-// ===========================================================================================================================
-body,
-html{
-	width: 100%;
-	height: 100%;
-	margin: 0 auto;
-	
-}
-.container{
-	position: relative;
-}
-img{
-	width: 100%;
-	max-width: 100%;
-	height: auto;
-}
-ul,
-code{
-	display: block;
-}
-code,
-.link{
-	-ms-word-break: break-all;
-	word-break: break-all;
-	word-break: break-word;
-	-webkit-hyphens: auto;
-	-moz-hyphens: auto;
-	hyphens: auto;
-}
-
-// ===========================================================================================================================
-// Sticky footer
-// ===========================================================================================================================
-#wrapper{
-	min-height: 100%;
-	height: auto !important;
-	height: 100%;
-	width:100%;
-	*width:100%;
-	margin: 0 auto -100px; // Footer eight's
-}
-footer{
-	position: relative;
-	margin: 0 auto;
-	height: 100px;
-	clear:both;
-}
-
-// ===========================================================================================================================
-// Responsive Video iframe
-// ===========================================================================================================================
-.embed-container {
-    position: relative;
-    padding-bottom: 56.25%; /* 16/9 ratio */
-    //padding-bottom: 75%; /* 4/3 ratio */
-    padding-top: 30px; /* IE6 workaround*/
-    height: 0;
-    overflow: hidden;
-}
-.embed-container iframe, .embed-container object, .embed-container embed {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
-// ===========================================================================================================================
-// Custom Theme
-// ===========================================================================================================================
+/*
+===========================================================================================================================
+Custom theme
+===========================================================================================================================
+*/
 @import url('theme.less');
